syntax = "proto3";

package shoppinglist;

message Item {
  string id = 1;
  string user_id = 2;
  int32 qty = 3;
  string text = 4;
  bool completed = 5;
}

message AddItemRequest {
  string user_id = 1;
  int32 qty = 2;
  string text = 3;
  bool completed = 4;
}
message DeleteItemRequest {
  string id = 1;
}
message GetItemsByUserIdRequest {
  string user_id = 1;
}
message GetItemsByUserIdResponse {
  repeated Item items = 1;
}

service ShoppingList {
  rpc AddItem(AddItemRequest) returns (Item) {}
  rpc UpdateItem(Item) returns (Item) {}
  rpc DeleteItem(DeleteItemRequest) returns (Item) {}
  rpc GetItemsByUserId(GetItemsByUserIdRequest) returns (GetItemsByUserIdResponse) {}
}
